# packaging-nesting-ai

./: .env.production.example  .gitattributes  .gitignore  README.md  current_capability_report.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_work_task_controls.py  0003_notifications.py  0004_export_lifecycle.py  0005_task_heartbeat_metrics.py  0006_adapter_config_versioning.py  0007_file_conversion_job.py  0008_production_operations_tables.py  0009_message_templates.py  0010_file_conversion_sla_metadata.py  0011_solution_export_storage_object_metadata.py  0012_notification_recipient_groups.py  0013_operation_log_indexes.py  0014_benchmark_enterprise_metrics.py  0015_batch_layout_enterprise_tables.py  0016_production_pattern_placement_artifacts.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/domain/: __init__.py  schemas.py
backend/app/services/: adapters.py  ai_tools.py  alerts.py  api_metrics.py  artworks.py  batch_artworks.py  batch_layout.py  batch_patterns.py  batch_planning.py  benchmark_importers.py  benchmarks.py  confirmations.py  enterprise_benchmarks.py  exception_writebacks.py  exports.py  file_conversion.py  geometry.py  health.py  maintenance.py  messaging.py  orders.py  preview.py  procurement_alerts.py  production_alerts.py  reports.py  repository.py  rules.py  scoring.py  security.py  storage.py  store.py  task_dispatch.py  validator.py  (+1 more)
(+187 files in other folders)
