[project]
name = "packaging-nesting-api"
version = "0.1.0"
description = "Enterprise packaging printing nesting optimization backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "celery>=5.4",
  "fastapi>=0.115",
  "httpx>=0.27",
  "minio>=7.2",
  "openpyxl>=3.1",
  "orjson>=3.10",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0",
  "redis>=5.0",
  "shapely>=2.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
optimization = [
  "ortools>=9.10",
  "rectpack>=0.2",
]
test = [
  "pytest>=8.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["../tests/backend"]

[tool.ruff]
line-length = 120

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
